# md_skill_craft

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  FOUNDATION_GUIDE.md  GEMINI.md  Makefile  QUICK_START.md  README.md  TRAINING_GUIDE.md  pyproject.toml  requirements.txt  run.sh  setup.bat  setup.sh
.claude/: settings.local.json
samples/: AGENT.md.sample  CLAUDE.md  CLAUDE.md.sample  GEMINI.md.sample
samples/prompts/: translation_examples.txt
samples/skills/: harness.md
samples/skills/templates/: TEMPLATE_GO_API.md  TEMPLATE_PYTHON_WEB.md  TEMPLATE_TYPESCRIPT_GAME.md
skills/: coding-standards.md  hooks.md  memory.md  orchestration.md  validation.md
skills/templates/: TEMPLATE_PYTHON_CLI.md  TEMPLATE_RUST_CLI.md  TEMPLATE_SELECTION_GUIDE.md  TEMPLATE_TYPESCRIPT_WEB.md
src/md_skill_craft/: __init__.py  cli.py
src/md_skill_craft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/md_skill_craft/config/: keystore.py  localization.py  pricing.py  settings.py
src/md_skill_craft/core/: __init__.py  anthropic_provider.py  base_provider.py  google_provider.py  openai_provider.py  provider_factory.py
src/md_skill_craft/modes/: mode1_guide.py  mode2_analysis.py
src/md_skill_craft/ui/: formatter.py  menu.py  progress.py
task/phase_05/: TASK_DEFINITION.md
task/phase_08/: TASK_DEFINITION.md
tests/: __init__.py  conftest.py  test_cli.py  test_localization.py  test_mode1_guide.py  test_mode2_analysis.py
